Fixed searchbar to top and hidden on mobile devices

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -342,3 +342,9 @@ thead {
 .vertical-align-middle{
   vertical-align:middle !important;
 }
+
+@media (max-width: 767px) {
+  .hidden-xs {
+    display: none !important;
+  }
+}
